# video-music-remover

./: .gitignore  CHANGELOG.md  Dockerfile  Pipfile  README.md  custom_exceptions.py  docker-image.yml  main.py  music_remover.py  pyproject.toml
.github/workflows/: build-publish-docker-image.yml  create-github-release.yml  docker-image.yml  python-publish.yml  ruff-format.yml  ruff.yml
src/video_music_remover/: __init__.py  __main__.py  cli.py  common.py  events.py  ffmpeg.py  main.py  music_remover_models.py  orms.py
src/video_music_remover/orms/: demucs.py  ffmpeg.py
