[project]
name = "video-music-remover"
version = "0.1.0"
description = "a cli tool to remove music from videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "demucs>=4.0.1",
    "diffq>=0.2.4",
    "pydantic>=2.10.6",
    "typer>=0.15.1",
]
authors = [{ name = "ash", email = "asaah18@gmail.com" }]

[project.scripts]
video-music-remover = "video_music_remover:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff.format]
skip-magic-trailing-comma = true