[project]
name = "video-music-remover"
version = "0.6.0"
description = "a cli tool to remove music from videos"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "demucs>=4.0.1",
    "pydantic>=2.10.6",
    "typer>=0.15.1",
]
authors = [{ name = "ash", email = "asaah18@gmail.com" }]
license = "MIT"
license-files = ['LICENSE']
keywords = ['music remover', 'video music remover', 'no music', 'remove music from video']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: End Users/Desktop',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Operating System :: OS Independent'
]

[project.urls]
Homepage = "https://github.com/asaah18/video-music-remover"
Repository = "https://github.com/asaah18/video-music-remover.git"
Issues = "https://github.com/asaah18/video-music-remover/issues"

[project.scripts]
video-music-remover = "video_music_remover:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff.format]
skip-magic-trailing-comma = true